--- a/Public/loginform.html
+++ b/Public/loginform.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="loginform.css" />
+    <link rel="stylesheet" href="../assets/css/loginform.css" />
     <title>Login Form</title>
   </head>
   <body>
