Tap-music added

--- a/Public/tap_music.html
+++ b/Public/tap_music.html
@@ -7,7 +7,7 @@
     <title>Tap Music</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/assets/css/tap_music.css">
 </head>
 
 <body>
@@ -22,26 +22,26 @@
         </div>
         <div class="pads">
             <div class="pad1">
-                <audio src="/sounds/sounds_bubbles.mp3" class="sound"></audio>
+                <audio src="/assets/Audio/tap_music_sounds/sounds_bubbles.mp3" class="sound"></audio>
             </div>
             <div class="pad2">
-                <audio src="/sounds/sounds_clay.mp3" class="sound"></audio>
+                <audio src="/assets/Audio/tap_music_sounds/sounds_clay.mp3" class="sound"></audio>
             </div>
             <div class="pad3">
-                <audio src="/sounds/sounds_confetti.mp3" class="sound"></audio>
+                <audio src="/assets/Audio/tap_music_sounds/sounds_confetti.mp3" class="sound"></audio>
             </div>
             <div class="pad4">
-                <audio src="/sounds/sounds_glimmer.mp3" class="sound"></audio>
+                <audio src="/assets/Audio/tap_music_sounds/sounds_glimmer.mp3" class="sound"></audio>
             </div>
             <div class="pad5">
-                <audio src="/sounds/sounds_moon.mp3" class="sound"></audio>
+                <audio src="/assets/Audio/tap_music_sounds/sounds_moon.mp3" class="sound"></audio>
             </div>
             <div class="pad6">
-                <audio src="/sounds/sounds_ufo.mp3" class="sound"></audio>
+                <audio src="/assets/Audio/tap_music_sounds/sounds_ufo.mp3" class="sound"></audio>
             </div>
         </div>
     </div>
-    <script src="/src/js/app.js" async defer></script>
+    <script src="/assets/Js/tap-music.js" async defer></script>
 </body>
 
 </html>
