--- a/Public/color_flipper_2.html
+++ b/Public/color_flipper_2.html
@@ -8,7 +8,7 @@
     </title>
 
     <!-- styles -->
-    <link rel="stylesheet" href="/assets/css/color_flipper.css" />
+    <link rel="stylesheet" href="../assets/css/color_flipper.css" />
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         </div>
     </main>
     <!-- javascript -->
-    <script src="/assets/Js/color_flipper_2.js"></script>
+    <script src="../assets/Js/color_flipper_2.js"></script>
 </body>
 
 </html>
