--- a/Public/tap_music.html
+++ b/Public/tap_music.html
@@ -7,7 +7,7 @@
     <title>Tap Music</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/tap_music.css">
+    <link rel="stylesheet" href="../assets/css/tap_music.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <script src="/assets/Js/tap-music.js" async defer></script>
+    <script src="../assets/Js/tap-music.js" async defer></script>
 </body>
 
 </html>
