--- a/Public/quiz.html
+++ b/Public/quiz.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Quiz App</title>
-    <link rel="stylesheet"  type="text/css" href="/assets/css/quiz.css"/>
-    <script src="/assets/Js/quiz.js" defer></script>
+    <link rel="stylesheet"  type="text/css" href="../assets/css/quiz.css"/>
+    <script src="../assets/Js/quiz.js" defer></script>
 </head>
 <body>
     <div class="quiz-container" id="quiz">
