--- a/Public/auto-write-text.html
+++ b/Public/auto-write-text.html
@@ -8,11 +8,11 @@
     <title>Auto Write Text</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/auto-write-text.css">
+    <link rel="stylesheet" href="../assets/css/auto-write-text.css">
 </head>
 
 <body>
-    <script src="/assets/Js/auto-write-text.js"></script>
+    <script src="../assets/Js/auto-write-text.js"></script>
 </body>
 
 </html>
