--- a/Public/digital_clock.html
+++ b/Public/digital_clock.html
@@ -7,13 +7,13 @@
     <title>Digital Clock</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/digital_clock.css">
+    <link rel="stylesheet" href="../assets/css/digital_clock.css">
 </head>
 
 <body>
     <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
 
-    <script src="/assets/Js/digital_clock.js"></script>
+    <script src="../assets/Js/digital_clock.js"></script>
 </body>
 
 </html>
