--- a/Public/purple_heart.html
+++ b/Public/purple_heart.html
@@ -8,12 +8,12 @@
     <title>Purple Heart Rain</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/purple_heart.css">
+    <link rel="stylesheet" href="../assets/css/purple_heart.css">
 </head>
 
 <body>
 
-    <script src="/assets/Js/purple_heart.js"></script>
+    <script src="../assets/Js/purple_heart.js"></script>
 </body>
 
 </html>
