--- a/Public/toast_notification.html
+++ b/Public/toast_notification.html
@@ -8,13 +8,13 @@
     <title>Toast Notification</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/toast_notification.css">
+    <link rel="stylesheet" href="../assets/css/toast_notification.css">
 </head>
 
 <body>
     <div id="container"></div>
     <button id="btn">Click Me Pretty Please</button>
-    <script src="/assets/Js/toast_notification.js"></script>
+    <script src="../assets/Js/toast_notification.js"></script>
 </body>
 
 </html>
