--- a/Public/loginform.html
+++ b/Public/loginform.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/loginform.css" />
-    <title>Login Form</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/css/loginform.css" />
+  <title>Login Form</title>
+</head>
+
+<body>
+  <div class="allContent">
     <h1 class="title">Login Form</h1>
-    <div class="form">
+    <div class="Logincard">
       <h1 class="formtitle">Login Your Account</h1>
-      <br /><br />
-      <label for="text">Username</label>
-      <input type="text" class="name" />
-      <br /><br />
-      <label for="password">Password</label>
-      <input type="password" class="password" />
-      <br /><br />
-      <a href="forget" class="pass">Forgot Password?</a>
-      <br /><br />
-      <button class="button">Submit</button>
-      
+      <hr>
+      <form action="">
+        <span><label for="text">Username</label>
+          <input type="text" class="name" placeholder="Username"/>
+        </span>
+        <span>
+          <label for="password">Password</label>
+          <input type="password" class="password"  placeholder="Password"/>
+        </span>
+        <button class="submitBtn">Login</button>
+      </form>
+      <hr>
+      <div class="bottom">
+        <p>Don't have an account?<a href="">click here</a> | </p>
+        <a href="forget" class="pass">Forgot Password?</a>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
