--- a/Public/solar.html
+++ b/Public/solar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Goku Universe</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../assets/css/solar.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
@@ -154,7 +154,7 @@
     <script src="js/scripts.min.js"></script>
   </body>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="../assets/js/solar.js"></script>
 
 </body>
 </html>
