--- a/Public/NGO.html
+++ b/Public/NGO.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanna_Hai_Humne</title>
-    <link rel="stylesheet" href="NGO.css">
+    <link rel="stylesheet" href="assets/css/NGO.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
