--- a/index.html
+++ b/index.html
@@ -1,1 +1,332 @@
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/analog_clock1.css">
+    <link href="assets/css/calculator1.css" rel="stylesheet">
+  <script src="assets/js/calculator.js" defer></script>
+  <link rel="stylesheet" href="assets/css/digitalclock1.css">
+      <link rel="stylesheet" href="assets/css/purple_heart.css">
+      <link rel="stylesheet"  type="text/css" href="assets/css/quiz1.css"/>
+    <script src="assets/Js/quiz.js" defer></script>
+    <link rel="stylesheet" href="assets/css/toast_notification.css">
+    <link rel="stylesheet"  type="text/css" href="assets/css/weather_app1.css"/>
+        <script src="assets/Js/weather_app.js" defer></script>
+
+
+
+
+
+    <title>Landing Page</title>
+    <style>
+      body{
+        background-color:mintcream;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container" style="padding-top:60px;">
+  <div class="row">
+    <div class="col-sm">
+      <!--This column is for Analog clock-->
+      <div class="card" style="width: 18rem;">
+          <!--Analog Clock-->
+          <div style="background-color:yellow;height: 280px;">
+                        <div class="clock">
+               <div class="hour">
+                    <div class="hr" id="hr"></div>
+               </div>
+               <div class="min">
+                   <div class="mn" id="mn"></div>
+               </div>
+               <div class="sec">
+                    <div class="sc" id="sc"></div>
+               </div>
+        </div>
+      </div>
+        <script type="text/javascript">
+                const deg = 6;
+                const hr = document.querySelector('#hr');
+                const mn = document.querySelector('#mn');
+                const sc = document.querySelector('#sc');
+
+                setInterval(() => {
+                    let day = new Date();
+                    let hh = day.getHours() * 30;
+                    let mm = day.getMinutes() * deg;
+                    let ss = day.getSeconds() *deg;
+
+                    hr.style.transform = `rotateZ(${(hh)+(mm/12)}deg)`;
+                    mn.style.transform = `rotateZ(${mm}deg)`;
+                    sc.style.transform = `rotateZ(${ss}deg)`;
+                });
+            </script>
+         <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
+                data-id="Astrodevil" data-description="Support me on Buy me a coffee!" 
+                data-message="" data-color="#40DCA5"
+                data-position="Right"
+                data-x_margin="50" data-y_margin="50">
+            </script>
+          <!--End of analog clock-->
+          <div class="card-body" style="height:160px;">
+          <h5 class="card-title">Analog_clock</h5>
+          <a href="Public/Analog_clock.html" class="btn btn-outline-primary">Try Now</a>
+          </div>
+     </div>
+      <!--End of Analog clock-->
+    </div>
+    <div class="col-sm">
+      <!--This column is for auto write text-->
+          <div class="card" style="width: 18rem;">
+        <!--Start of auto-write-text-->
+          <div style="background-color:#eb3173; height:250px;">
+          <h4 id="x" style= "color:white; padding-top:40px;"></h4>
+        </div>
+          <script>
+                        const text = "Hi, My name is Shivam Gupta";
+
+                        let index = 0;
+
+                        function writeText() {
+                        document.getElementById("x").innerText = text.slice(0, index);
+
+                        index++;
+
+                        if (index > text.length - 1) {
+                        index = 0;
+                      }
+                    }
+              setInterval(writeText, 100);
+        </script>
+        <!--End of auto write text-->
+        <div class="card-body" style="height:185px;">
+        <h5 class="card-title">Auto_write_text</h5>
+        <!--<p class="card-text">Click this button to explore Auto_write_text</p>-->
+        <a href="Public/auto-write-text.html" class="btn btn-outline-primary">Try Now</a>
+        </div>
+      </div>
+      <!--End of auto write text-->
+    </div>
+    <div class="col-sm">
+      <!--This column is for calculator-->
+      <div class="card" style="width: 18rem;">
+        <!--<img class="card-img-top" src="assets/images/calculator1.jpg" alt="Card image cap"style="height:190px;">-->
+        <!--Start of Calculator-->
+                <div class="calculator-grid">
+                <div class="output">
+                <div data-previous-operand class="previous-operand"></div>
+                <div data-current-operand class="current-operand"></div>
+                </div>
+                <button data-all-clear class="span-two">AC</button>
+                <button data-delete>DEL</button>
+                <button data-operation>÷</button>
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button data-operation>*</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-operation>+</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-operation>-</button>
+                <button data-number>.</button>
+                <button data-number>0</button>
+                <button data-equals class="span-two">=</button>
+                </div>
+        <!--End of calculator -->
+        <div class="card-body">
+        <h5 class="card-title">Calculator</h5>
+        <!--<p class="card-text">Click this button to explore Calculator</p>-->
+        <a href="Public/calculator.html" class="btn btn-outline-primary">Try now</a>
+        </div>
+    </div>
+      <!--End of calculator-->
+    </div>
+
+  <div class="col-sm" style="padding-top:20px;">
+      <!--This column is for color_flipper_1-->
+          <div class="card" style="width: 18rem;">
+            <!--Color flipper1-->
+                          <div id=Color_flipper_1 style="height:200px;">
+                          <main>
+                            <div class="container">
+                              <h2 style="color:ghostwhite;text-transform: capitalize;background: black;">background color : <span class="color" style="color:ghostwhite;text-transform: capitalize;">#f1f5f8</span></h2>
+                              <button class="btn btn-hero" id="btn" style="border:1px solid black;">click me</button>
+                            </div>
+                          </main>
+                        </div>
+                      <!-- javascript -->
+                      <script>
+                        const colors = ['green', 'red', 'rgba(133,122,200)', '#f15025'];
+                          const btn = document.getElementById('btn');
+                          const color = document.querySelector('.color');
+
+                          btn.addEventListener('click', function() {
+                          //get random number between 0-3
+
+                          const randomNumber = getRandomNumber();
+                          document.getElementById("Color_flipper_1").style.backgroundColor = colors[randomNumber];
+                          color.textContent = colors[randomNumber];
+                        })
+
+                            function getRandomNumber() {
+                            return Math.floor(Math.random() * colors.length);
+                        }
+                      </script>
+            <!--End of color flipper1-->
+          <div class="card-body">
+          <h5 class="card-title">Color_flipper_1</h5>
+          <a href="Public/color_flipper_1.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+          </div>
+      <!--End of color_flipper_1-->
+    </div>
+    <div class="col-sm" style="padding-top: 20px;">
+      <!--This column is for color_flipper_2-->
+          <div class="card" style="width: 18rem;">
+            <!--colorflipper-->
+              <div style="background-color:plum;height:200px;">
+                <h4 style="padding-left: 60px;padding-top: 60px;color: ghostwhite;">Colorflipper2</h4>
+              </div>
+            <!--End of color flipper-->
+          <div class="card-body">
+          <h5 class="card-title">Color_flipper_2</h5>
+          <a href="Public/color_flipper_2.html" class="btn btn-outline-primary">Try now</a>
+        </div>
+        </div>
+      <!--End of color_flipper_2-->
+    </div>
+    <div class="col-sm" style="padding-top:20px;">
+      <!--This column is for digital_clock-->
+            <div class="card" style="width: 18rem;">
+              <div style="height:200px;background-color: black;">
+            <div id="MyClockDisplay" class="clock1" onload="showTime()"></div>
+              <script src="assets/Js/digital_clock.js"></script>
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">Digital_clock</h5>
+            <a href="Public/digital_clock.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+          </div>
+      <!--End of digital_clock-->
+    </div>
+    <div class="col-sm" style="padding-top:20px;">
+      <!--This column is for loginform-->
+          <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/images/login.jpg" alt="Card image cap">
+          <div class="card-body" style="height:250px">
+          <h5 class="card-title">Log in form</h5>
+          <a href="Public/loginform.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+      <!--End of loginform-->
+    </div>
+    <div class="col-sm" style="padding-top:20px;">
+      <!--This column is for purple_hurt-->
+      <div class="card" style="width: 18rem;">
+        <img src="assets/images/purple_heart.jpg">
+            <script src="assets/Js/purple_heart.js"></script>
+      <div class="card-body" style="height:230px;">
+      <h5 class="card-title">Purple_heart_animation</h5>
+      <a href="Public/purple_heart.html" class="btn btn-outline-primary">Try now</a>
+      </div>
+      </div>
+      <!--End of purple_hurt-->
+    </div>
+    <div class="col-sm" style="padding-top:20px;">
+      <!--This column is for quiz-->
+      <div class="card" style="width: 18rem;">
+      <!--Start of quiz-->
+                <div class="quiz-container" id="quiz">
+        <div class="quiz-header">
+            <h2 id="question">Question Text</h2>
+        <ul>
+            <li><input type="radio" id="a" name="answer" class="answer"><label id="a_text" for="a">Question</label></li>
+            <li><input type="radio" id="b" name="answer" class="answer"><label id="b_text" for="b">Question</label></li>
+            <li><input type="radio" id="c" name="answer" class="answer"><label id="c_text" for="c">Question</label></li>
+            <li><input type="radio" id="d" name="answer" class="answer"><label id="d_text" for="d">Question</label></li>
+            
+        </ul>
+        
+        </div>
+        <button id="submit">Submit</button>
+    </div>
+      <!--End of quiz-->
+      <div class="card-body">
+      <h5 class="card-title"></h5>
+      <a href="Public/quiz.html" class="btn btn-outline-primary">Try now</a>
+      </div>
+      </div>
+      <!--End of quiz-->
+    </div>
+    <div class="col-sm" style="margin-top:20px">
+      <!--This column is for tap_music-->
+      <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="assets/images/music.jpg" alt="Card image cap" style="height:200px;">
+      <div class="card-body" style="height:155px;">
+      <h5 class="card-title">Music</h5>
+      <a href="Public/tap_music.html" class="btn btn-outline-primary">Try now</a>
+      </div>
+      </div>
+      <!--End of tap_music-->
+    </div>
+    <div class="col-sm" style="margin-top:20px;">
+
+      <!--This column is for toast_notification-->
+        <div class="card" style="width: 18rem;">
+        <!--Start of notification-->
+             <div id="container"></div>
+             <img src="assets/images/notification.jpg">
+              <button id="btn">Click Me Pretty Please</button>
+              <script src="assets/Js/toast_notification.js"></script>
+        <!--End of notification-->
+        <div class="card-body" style="height:110px;">
+        <h5 class="card-title">Notification</h5>
+        <a href="Public/toast_notification.html" class="btn btn-outline-primary">Try now</a>
+        </div>
+        </div>
+      <!--End of toast_notification-->
+    </div>
+    <div class="col-sm" style="margin-top:10px;">
+
+      <!--This column is for weather_app-->
+          <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/images/weather.jpg" alt="Card image cap" style="height:200px;">
+          <form id="form">
+            <input class="input" 
+                type="text"
+                id="search"
+                placeholder="Search by location"
+                autocomplete="off"
+            />
+        </form>
+        <main id="main"></main>
+          <div class="card-body">
+          <h5 class="card-title">Check_weather</h5>
+          <a href="Public/weather_app.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+          </div>
+      <!--End of weather_app-->
+    </div>
+
+
+
+  </div>
+</div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
