--- a/Public/restaurant/restaurant.html
+++ b/Public/restaurant/restaurant.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
-    <link rel="stylesheet" href="../assets/css/restaurant.css">
+    <link rel="stylesheet" href="../assets/css/restaurant/restaurant.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <script src="../assets/Js/restaurant.js"></script>
 </head>
