--- a/Public/restaurant/menu.html
+++ b/Public/restaurant/menu.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Menu</title>
-  <link rel="stylesheet" href="../assets/css/restaurant/menu.css">
+  <link rel="stylesheet" href="../../assets/css/restaurant/menu.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
