Changes done! now all files are outside of the folder.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/analog_clock1.css">
-    <link href="assets/css/calculator1.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="analog_clock1.css">
+    <link href="calculator1.css" rel="stylesheet">
   <script src="assets/js/calculator.js" defer></script>
-  <link rel="stylesheet" href="assets/css/digitalclock1.css">
+  <link rel="stylesheet" href="digitalclock1.css">
       <link rel="stylesheet" href="assets/css/purple_heart.css">
-      <link rel="stylesheet"  type="text/css" href="assets/css/quiz1.css"/>
+      <link rel="stylesheet"  type="text/css" href="quiz1.css"/>
     <script src="assets/Js/quiz.js" defer></script>
     <link rel="stylesheet" href="assets/css/toast_notification.css">
-    <link rel="stylesheet"  type="text/css" href="assets/css/weather_app1.css"/>
+    <link rel="stylesheet"  type="text/css" href="weather_app1.css"/>
         <script src="assets/Js/weather_app.js" defer></script>
 
 
