--- a/Public/findnum.html
+++ b/Public/findnum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="assets/findnum_style.css" />
+    <link rel="stylesheet" href="assets/CSS/findnum_style.css" />
     <title>Guess My Number!</title>
   </head>
   <body>
@@ -27,6 +27,6 @@
         </p>
       </section>
     </main>
-    <script src="assets/findnum.js"></script>
+    <script src="assets/JS/findnum.js"></script>
   </body>
 </html>
