--- a/Public/happy_hacktober/happyhactober.html
+++ b/Public/happy_hacktober/happyhactober.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Hacktober</title>
-    <link rel="stylesheet" href="../../assets/css/happy hacktober/happyhacktober.css">
+    <link rel="stylesheet" href="../../assets/css/happy_hacktober/happyhacktober.css">
 </head>
 <body>
     <h2>Enter your Name</h2>
