Updated the Rock-paper-scissor directory

--- a/Public/rock-paper-scissor/full.html
+++ b/Public/rock-paper-scissor/full.html
@@ -6,8 +6,8 @@
 	<!-- </form> -->
 	
 
-	<img src="../assets/Images/2.jpg" onclick="GoInFullscreen()" id="button-one" width="65" height="45">
-	<img src="../assets/Images/1.jpg" onclick="GoInOutscreen()" id="button-two" width="65" height="45">
+	<img src="../../assets/Images/2.jpg" onclick="GoInFullscreen()" id="button-one" width="65" height="45">
+	<img src="../../assets/Images/1.jpg" onclick="GoInOutscreen()" id="button-two" width="65" height="45">
 	<script>
 	var element = document.documentElement;
 	document.querySelector("#button-two").style.display = "none";
