--- a/Public/rock-paper-scissor/load.html
+++ b/Public/rock-paper-scissor/load.html
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
 body
 	{
-		background-image: url(bg_game.jpg);
+		background-image: url(../../assets/Images/bg_game.jpg);
 		background-size: 1350px 760px;
 	}
 #myProgress {
@@ -34,7 +34,7 @@ h1{
 
 </style>
 <body onload="move()">
-<img src="../assets/Images/i3.png" style="display: block;margin-left: auto;margin-right: auto;height: 300px;">
+<img src="../../assets/Images/i3.png" style="display: block;margin-left: auto;margin-right: auto;height: 300px;">
 <h1>LOADING...</h1>
 <div id="myProgress">
   <div id="myBar">1%</div>
