--- a/Public/rock-paper-scissor/play.html
+++ b/Public/rock-paper-scissor/play.html
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css?family=Chilanka&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
 body{
-		background-image: url(bg_game.jpg);
+		background-image: url(../../assets/Images/bg_game.jpg);
 	}
 .sec{
 	position: absolute;
@@ -39,9 +39,9 @@ function myFunction() {
 </script>
 </head>
 <body>
-<img src="../assets/Images/game-section.png" class="sec">
-<a href="solo.html"><img src="../assets/Images/but_solo.png" class="onep"></a>
+<img src="../../assets/Images/game-section.png" class="sec">
+<a href="solo.html"><img src="../../assets/Images/but_solo.png" class="onep"></a>
 <h1 class="h11">LET'S GO....</h1>
-<img src="../assets/Images/but_exit.png" width="80" height="90" style="cursor: pointer; position: absolute;left: 1270px;" onclick="myFunction()">
+<img src="../../assets/Images/but_exit.png" width="80" height="90" style="cursor: pointer; position: absolute;left: 1270px;" onclick="myFunction()">
 </body>
 </html>
