--- a/Public/rock-paper-scissor/rock-paper-scissor.html
+++ b/Public/rock-paper-scissor/rock-paper-scissor.html
@@ -4,7 +4,7 @@
 <style type="text/css">
 	body
 	{
-		background-image: url(../assets/Images/bg_menu.jpg);
+		background-image: url(../../assets/Images/bg_menu.jpg);
 		background-size: 1350px 760px;
 	}
 	.play
@@ -18,6 +18,6 @@
 </script>
 </head>
 <body>
-	<a href="load.html"><img src="../assets/Images/but_play.png" class="play" width="170" height="170"></a>
+	<a href="load.html"><img src="../../assets/Images/but_play.png" class="play" width="170" height="170"></a>
 </body>
 </html>
