Added inspirational quotes in list

--- a/Public/accordion.html
+++ b/Public/accordion.html
@@ -60,50 +60,25 @@ left: 95%;
     transition: 1s;
     
 }
-footer {
-    position: fixed;
-    bottom: 2px;
-    left: 2px;
-    
-}
-.atag {
-    font-size: 1vw;
-    background: none;
-    position: relative;
-    left: -1%;
-    letter-spacing: normal;
-}
-p {
-    font-size: 1vw;
-    color: rgb(255, 0, 0);
-}
-.date {
-    font-size: 1vw;
-    color: rgb(255, 0, 0);
-}
 </style>
 </head>
 <body>
     <div class="accordion">
         <div class="contentbox">
-            <div class="label">List One</div>
-            <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae saepe necessitatibus laboriosam architecto tempore a dicta quod sunt doloribus perspiciatis!</p></div>
+            <div class="label">Quote One</div>
+            <div class="content"><p>The eye sees only what the mind is prepared to comprehend</p></div>
         </div>  <div class="contentbox">
-            <div class="label">List Two</div>
-            <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae saepe necessitatibus laboriosam architecto tempore a dicta quod sunt doloribus perspiciatis!</p></div>
+            <div class="label">Quote Two</div>
+            <div class="content"><p>Do not try to dance better than anyone else, try to dance better than yourself</p></div>
         </div>  <div class="contentbox">
-            <div class="label">List Three</div>
-            <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae saepe necessitatibus laboriosam architecto tempore a dicta quod sunt doloribus perspiciatis!</p></div>
+            <div class="label">Quote Three</div>
+            <div class="content"><p>Don't give up at half time, Concentrate on winning the second half</p></div>
         </div>
         <div class="contentbox">
-            <div class="label">List Four</div>
-            <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae saepe necessitatibus laboriosam architecto tempore a dicta quod sunt doloribus perspiciatis!</p></div>
+            <div class="label">Quote Four</div>
+            <div class="content">The best way to predict the future is to invent it</p></div>
         </div>
     </div>
-    <footer>
-        <div><p>Credit:- <a href="https://github.com/Palaksharma23" class="atag" >Palak Sharma</a></p></div>
-        <div class="date">Date:- 11-09-2021</div>
-    </footer>
 </body>
 <script>
     const accordion = document.getElementsByClassName('contentbox');
