--- a/Public/reviews/reviews.html
+++ b/Public/reviews/reviews.html
@@ -14,7 +14,7 @@
         <img id="image" src="person1.jpg" alt="">
         <h3 id="Name">Harley Spencer</h3>
         <h4 id="designation">UI/UX Designer</h4>
-        <p id="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum exercitationem quis eius fuga numquam neque ut laborum aut corrupti sit.</p>
+        <p id="content">A hardworking and dedicated UI/UX Designer. I believe in creating a healthy environment which can help each one of us to grow.</p>
         <button id="prev"><ion-icon name="chevron-back-outline"></ion-icon></button>
         <button id="next"><ion-icon name="chevron-forward-outline"></ion-icon></button>
     </div>
