--- a/index.html
+++ b/index.html
@@ -255,7 +255,17 @@
           </div>
       <!--End of weather_app-->
     </div>
-
+    <div class="col-sm">
+            <!--This column is for guess_color-->
+              <div class="card">
+                <img class="card-img-top" src="assets/images/guess_color.png" alt="Card image cap">
+                  <div class="card-body" id="guess_color">
+                    <h5 class="card-title">Guess Color</h5>
+                    <a href="Public/guess_color.html" class="btn btn-outline-primary">Try now</a>
+                  </div>
+              </div>
+              <!--End of guess_color-->
+    </div>
 
 
   </div>
