--- a/Public/reviews/reviews.html
+++ b/Public/reviews/reviews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".../assets/css/reviews.css">
+    <link rel="stylesheet" href="/assets/css/reviews.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Reviews</title>
@@ -18,6 +18,6 @@
         <button id="prev"><ion-icon name="chevron-back-outline"></ion-icon></button>
         <button id="next"><ion-icon name="chevron-forward-outline"></ion-icon></button>
     </div>
-    <script src=".../assets/js/reviews.js"></script>
+    <script src="/assets/js/reviews.js"></script>
 </body>
 </html>
