--- a/Public/spotify-clone.html
+++ b/Public/spotify-clone.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spotify - Your favourite music is here</title>
-        <link rel="stylesheet" href="assests/css/spotify-clone.css">
+        <link rel="stylesheet" href="../assets/css/spotify-clone.css">
         </head>
 <body>
     <nav id="nav-bar">
@@ -85,7 +85,7 @@
             <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Warriyo - Mortals [NCS Release]</span>
         </div>
     </div>
-    <script src="assets/js/spotify-clone.js"></script>
+    <script src="../assets/js/spotify-clone.js"></script>
     <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
 </body>
 </html>
