--- a/Public/modalclosingbutton.html
+++ b/Public/modalclosingbutton.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/css/Modal.css">
     <style>
         body {
-            background-image: url("background.jpg");
+            background-image: url("/assets/Images/background.jpg");
         }
     </style>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
