--- a/Public/reviews.html
+++ b/Public/reviews.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="main">
-        <img id="image" src="person1.jpg" alt="">
+        <img id="image" src="/assets/Images/person1.jpg" alt="">
         <h3 id="Name">Harley Spencer</h3>
         <h4 id="designation">UI/UX Designer</h4>
         <p id="content">A hardworking and dedicated UI/UX Designer. I believe in creating a healthy environment which can help each one of us to grow.</p>
