file name changed

--- a/Public/calculator.html
+++ b/Public/calculator.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Calculator</title>
-  <link href="../assets/css/calculator.css" rel="stylesheet">
-  <script src="../assets/js/calculator.js" defer></script>
+  <link href="../assets/css/Calculator.css" rel="stylesheet">
+  <script src="../assets/Js/Calculator.js" defer></script>
 </head>
 <body>
   <div class="calculator-grid">
