Guess_Color issue has been resolved

--- a/Public/guess_color.html
+++ b/Public/guess_color.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/guess_color.css">
+    <link href="../assets/css/guess_color.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         </select>
     </label>
     <div id="container"></div>
-    <script src="/assets/Js/guess_color.js"></script>
+    <script src="../assets/Js/guess_color.js" defer></script>
 </body>
 
 </html>
