--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
 
 
+
+
   <title>Landing Page</title>
 </head>
 
@@ -258,7 +260,9 @@
       <div class="col-sm">
         <!--This column is for guess_color-->
         <div class="card">
+          
           <img class="card-img-top" src="assets/Images/guess_color.png" alt="Card image cap">
+          <script src="assets/Js/guess_color.js" defer></script>
           <div class="card-body" id="guess_color">
             <h5 class="card-title">Guess Color</h5>
             <a href="Public/guess_color.html" class="btn btn-outline-primary">Try now</a>
