added breakout, tic-tac-toe, pokemon generator and candy crush projects

--- a/index.html
+++ b/index.html
@@ -266,6 +266,53 @@
         </div>
         <!--End of guess_color-->
       </div>
+      <div class="col-sm">
+        <!--This column is for pokemon-generator-->
+        <div class="card">
+          <img class="card-img-top" src="assets/Images/Pokemon.PNG" alt="Card image cap">
+          <div class="card-body" id="pokemon_generator">
+            <h5 class="card-title">Pokemon Generator</h5>
+            <a href="Public/pokemon-generator.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+        <!--End of pokemon generator-->
+      </div>
+      <div class="col-sm">
+        <!--This column is for Tic Tac Toe-->
+        <div class="card">
+          <img class="card-img-top" src="assets/Images/Tic-Tac-Toe.PNG" alt="Card image cap">
+          <div class="card-body" id="tic_tac_toe">
+            <h5 class="card-title">Tic Tac Toe</h5>
+            <a href="Public/tic-tac-toe.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+        <!--End of Tic Tac Toe-->
+      </div>
+
+      <div class="col-sm">
+        <!--This column is for Breakout Game-->
+        <div class="card">
+          <img class="card-img-top" src="assets/Images/Breakout.PNG" alt="Card image cap">
+          <div class="card-body" id="breakout">
+            <h5 class="card-title">Breakout Game</h5>
+            <a href="Public/breakout.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+        <!--End of Breakout Game-->
+      </div>
+
+      <div class="col-sm">
+        <!--This column is for Candy Crush-->
+        <div class="card">
+          <img class="card-img-top" src="assets/Images/candy-crush-images/Candy-Crush.PNG" alt="Card image cap">
+          <div class="card-body" id="candy_crush">
+            <h5 class="card-title">Candy Crush</h5>
+            <a href="Public/candy_crush.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+        <!--End of Breakout Game-->
+      </div>
+      
 
 
     </div>
