change UI of colorFlipper 1 and more colors

--- a/Public/color_flipper_2.html
+++ b/Public/color_flipper_2.html
@@ -16,8 +16,8 @@
         <div class="nav-center">
             <h4>color flipper</h4>
             <ul class="nav-links">
-                <li><a href="color_flipper_1.html">simple</a></li>
-                <li><a href="color_flipper_2.html">hex</a></li>
+                <li><a href="color_flipper_1.html">HTML Color Names</a></li>
+                <li><a href="color_flipper_2.html">Hex</a></li>
             </ul>
         </div>
     </nav>
