--- a/Public/color_flipper_1.html
+++ b/Public/color_flipper_1.html
@@ -16,15 +16,17 @@
         <div class="nav-center">
             <h4>color flipper</h4>
             <ul class="nav-links">
-                <li><a href="color_flipper_1.html">simple</a></li>
-                <li><a href="color_flipper_2.html">hex</a></li>
+                <li><a href="color_flipper_1.html">HTML Color Names</a></li>
+                <li><a href="color_flipper_2.html">Hex</a></li>
             </ul>
         </div>
     </nav>
     <main>
         <div class="container">
-            <h2>background color : <span class="color">#f1f5f8</span></h2>
-            <button class="btn btn-hero" id="btn">click me</button>
+            <h3>Click for surprise!</h3>
+            <div class="circle" onclick="changeColor()">
+                <span class="text">Color_name</span>
+            </div>
         </div>
     </main>
     <!-- javascript -->
