Added new projects

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -24,15 +23,16 @@
   <script src="assets/js/calculator.js" defer></script>
   <script src="assets/Js/quiz.js" defer></script>
   <script src="assets/Js/weather_app.js" defer></script>
+  <script src="assets/Js/Speed_Typer.js" defer></script>
 
 
-
-
+  
 
   <title>Landing Page</title>
 </head>
 
 <body>
+  <h1 class="title"><b>JavaScript Projects</b></h1>
   <div class="container background-container">
     
         <!--This column is for Analog clock-->
@@ -224,11 +224,46 @@
         </div>
         <!--End of guess_color-->
 
-      </div>
+      
 
       <!-- add new projects here inside a div with class card and inside that add image with class card-img-top and after that make a div with class card-body and write heading <h5> and <p> inside that div-->
 
-   
+        <!-- This is for typing test -->
+        <div class="card">
+          <!--Start of Speed Typer-->
+          <img class="card-img-top" src="assets/Images/speed_typer.jpg" alt="Card speed_typer">
+          <div class="card-body">
+            <h5 class="card-title">Speed Typer</h5>
+            <p>How fast can you type??</p>
+            <a href="Public/Speed_Typer.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+     <!-- end of speed typer -->
+
+     <!-- This is for restaurant website -->
+     <div class="card">
+      <!--Start of Restaurant Website-->
+      <img class="card-img-top" src="assets/Images/restaurant.jpg" alt="Card restaurant">
+      <div class="card-body">
+        <h5 class="card-title">Restaurant Website</h5>
+        <p>A Restaurant website template that you can use..</p>
+        <a href="Public/restaurant/restaurant.html" class="btn btn-outline-primary">Try now</a>
+      </div>
+    </div>
+ <!-- end of Restaurant website -->
+
+ <!-- This is for Rock Paper Scissor -->
+ <div class="card">
+  <!--Start of Rock Paper Scissor-->
+  <img class="card-img-top" src="assets/Images/i3.png" alt="Card restaurant">
+  <div class="card-body">
+    <h5 class="card-title">Rock Paper Scissor</h5>
+    <p>Have fun playing rock paper scissor game..!</p>
+    <a href="Public/rock-paper-scissor/rock-paper-scissor.html" class="btn btn-outline-primary">Try now</a>
+  </div>
+</div>
+<!-- end of Rock Paper Scissor -->
+    </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
