--- a/Public/CaesarCipher.html
+++ b/Public/CaesarCipher.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link ​rel="​stylesheet​" ​href​="​/stylecipher.css​" ​>
-    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" href="/CaesarCipher.css">
+    <script type="text/javascript" src="CaesarCipher.js"></script>
   </head>
 
   <body>
