--- a/index.html
+++ b/index.html
@@ -263,6 +263,19 @@
   </div>
 </div>
 <!-- end of Rock Paper Scissor -->
+
+<!-- This is for Caesar Cipher -->
+<div class = "card">
+  <!-- Start of Caesar Cipher -->
+  <img class="card-img-top" src="assets/Images/CaesarCipher.png" alt="Card Caesar-Cipher">
+  <div class="card-body">
+    <h5 class="card-title">Caesar Cipher</h5>
+    <p>Now Encrypt and Decrypt passwords at your own comfort!</p>
+    <a href="Public/CaesarCipher.html" class="btn btn-outline-primary">Try now</a>
+  </div>
+</div>
+<!-- end of Caesar Cipher -->
+
     </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
