Add Library Website

--- a/index.html
+++ b/index.html
@@ -521,6 +521,16 @@
       <a href="Public/word-count-calculator.html" class="btn btn-outline-primary">Try Now</a>
     </div>
   </div>
+  <!--This div is for Library website-->
+  <div class="card card1">
+    <img class="card-img-top" src="assets/Images/booksLibrary.png" alt="Library">
+   <div class="card-body">
+      <h5 class="card-title">Books Library</h5>
+      <p>Add Books or delete books from a list.</p>
+      <a href="Public/BooksLibrary.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+    </div>
+  </div>
+  <!--End of Library website-->
     </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
