made the try now button to not go down when letters are popped

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <!--Start of auto-write-text-->
           <img class="card-img-top" src="assets/Images/auto-write.jpg" alt="Card auto-write">
           <div class="auto-write">
-            <h4 id="auto-write-target"></h4>
+            <h4 style="color: crimson;" id="auto-write-target" class="auto-write-target-class"></h4>
           </div>
           <!--End of auto write text-->
           <div class="card-body" id="auto-write-text">
