Speech to text Converter program modified

--- a/Public/Speech-to-Text-Converter.html
+++ b/Public/Speech-to-Text-Converter.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>JavaScript Speech to Text</title>
-	<link rel="stylesheet" href="speech-to-text-converter.css"
+	<link rel="stylesheet" href="../assets/css/speech-to-text-converter.css"
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 	<p><button type="button" onclick="runSpeechRecognition()">Speech to Text</button> &nbsp; <span id="action"></span>
 	</p>
 	<div id="output" class="hide"></div>
-	<script src= "speech-to-text-converter.js"></script>
+	<script src= "../assets/Js/speech-to-text-converter.js"></script>
 	</div>
 </body>
 
