add guess the number game

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="assets/Js/quiz.js" defer></script>
   <script src="assets/Js/weather_app.js" defer></script>
   <script src="assets/Js/Speed_Typer.js" defer></script>
+  <script src="assets/Js/guess-the-number.js" defer></script>
 
 
   
@@ -531,6 +532,17 @@
     </div>
   </div>
   <!--End of Library website-->
+  <!-- This is for Guess the Number -->
+  <div class="card">
+    <!--Start of Guess the Number-->
+    <img class="card-img-top" src="assets/Images/guess-the-number.png" alt="guess-the-number>
+    <div class="card-body">
+      <h5 class="card-title">Guess The Number</h5>
+      <p>Is your guess correct?</p>
+      <a href="Public/guess-the-number.html" class="btn btn-outline-primary">Try now</a>
+    </div>
+  </div>
+<!-- end of guess the number -->
     </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
