#175-updated weather ui

--- a/Public/weather_app.html
+++ b/Public/weather_app.html
@@ -8,6 +8,7 @@
         <script src="../assets/Js/weather_app.js" defer></script>
     </head>
     <body>
+      <div class="card">
         <form id="form">
             <input
                 type="text"
@@ -17,5 +18,6 @@
             />
         </form>
         <main id="main"></main>
+        </div>
     </body>
 </html>
